# AdaptationWithWASL

./: .gitignore  CLAUDE.md  LICENSE  README.md  SetUp.md
OptimizingController/: Cargo.toml  README.md  run_sim.sh
OptimizingController/profiles/: aes.knobtable  aes.measuretable  aes.variancetable  object_detector.knobtable  object_detector.measuretable  object_detector.variancetable  radar.knobtable  radar.measuretable  radar.variancetable  search_engine.knobtable  search_engine.measuretable  search_engine.variancetable  soa.knobtable  soa.measuretable  soa.variancetable
OptimizingController/proteus-outputs/: aes  aes2  battery_saver  object_detector  radar  radar2  search_engine  search_engine2  soa  soa2
OptimizingController/src/: kalman_filter.rs  lib.rs  main.rs  optimization_expression.rs  optimization_type.rs
apto/: Cargo.toml  README.md
apto-tailbench-apps/: Cargo.toml  README.md  compile_binary.sh  make_mt.py  measuretable  numCores.0  output
apto-tailbench-apps/dnn-data/: app_kt_filtered  app_mt_filtered  sys_kt_filtered  sys_mt_filtered
apto-tailbench-apps/experiment_scripts/: profile_all.sh  run.sh  runTest.sh
apto-tailbench-apps/masstree-data/: sys_mt_filtered
apto-tailbench-apps/moses-data/: app_mt_filtered  sys_mt_filtered
apto-tailbench-apps/profiles/: dnn.mt  masstree.mt  moses-new.mt  moses.mt  multi-silo-xapian-generic.mt  multi-xapian-moses-generic.mt  multi-xapian-moses.kt  multi-xapian-moses.mt  silo.mt  xapian-new.kt  xapian-new.mt  xapian.kt  xapian.mt
apto-tailbench-apps/scripts/: app_mt_filtered  filter_profile.py  multiAppProfileGenerate.py  plot.py  plot_combined.py  plot_multi_applications.py  plot_non_adaptive.py  plot_single_application.py
apto-tailbench-apps/silo-data/: app_mt_filtered  sys_mt_filtered
apto-tailbench-apps/src/: apps.rs  arch_utils.rs  components.rs  configurer.rs  fix_output.py  (+1 more)
(+74 files in other folders)
