[package]
name = "apto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0
debug = true

[dev-dependencies]
rand = "*"

[dependencies]
OptimizingController = { path = "../OptimizingController" }
regex = "1.5.4"
lazy_static = "1.4.0"
libc = { version = "0.2.108", features = ["default", "extra_traits"] }
energymon = { git = "https://github.com/energymon/energymon-rust.git" }
energy-monitor = "0.2.1"
log = "0.4.14"
itertools = "0.10.1"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
PoleAdaptation = { path = "../PoleAdaptation" }

#reqwest = { version = "0.11", features = ["json"] }
#tokio = "1"
#serde_json = "1.0"
